2009-01-16  Sven Herzberg  <sven@imendio.com>

	Added proper and distinguishable logging domains

	* engine/Makefile.am,
	* server/Makefile.am: set the logging domains to "sapwood-server" and
	"sapwood-engine"

2009-01-16  Sven Herzberg  <sven@imendio.com>

	* demos/Makefile.am: some dist-related fixes
	* demos/rgba-demo.gtkrc: some smaller touches

2009-01-10  Sven Herzberg  <sven@imendio.com>

	Render the entry with the gradient from the gradient demo

	* demos/rgba-demo.c (window_expose_event), (main): change the
	expose-handler to just clean the window connected to the expose event;
	connect the expose handler also to the signal from the entry (to clear
	frame and text windows)
	* demos/rgba-demo.gtkrc: add the gradient to the entry rendering stuff

2009-01-10  Sven Herzberg  <sven@imendio.com>

	Added a transparent main window to the gradient demo (to check how
	well it works)

	* demos/gradient.c (window_expose_event), (main): added a semi transparent
	background to the window; set a default size; improve the logging
	messages

2009-01-10  Sven Herzberg  <sven@imendio.com>

	Added the button style from the buttonbox demo

	* demos/rgba-demo.gtkrc: just copied the button style part

2009-01-10  Sven Herzberg  <sven@imendio.com>

	Added nice stripes to the window, so transparency will be visible once
	the children are transparent.

	* demos/images/window.png,
	* demos/images/window.xcf: added stripes to the window and the GIMP
	xcf source file

2009-01-10  Sven Herzberg  <sven@imendio.com>

	Prepare the transparent background for the demo

	* demos/rgba-demo.c (window_expose_event), (main): and fix some
	layouting issues

2009-01-10  Sven Herzberg  <sven@imendio.com>

	Added a background image for the RGBA demo

	* demos/rgba-demo.gtkrc,
	* demos/images/window.png: added a semi-transparent background image
	to the demo

2009-01-10  Sven Herzberg  <sven@imendio.com>

	Get the remaining RGBA bits into sapwood

	* engine/sapwood-pixmap.c